--- a/register.html
+++ b/register.html
@@ -4,16 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git demo</title>
+    <title>注册页面</title>
 </head>
 
 <body>
-    <div>git-demo</div>
-    <a href="">hello</a>
-    wjg111222
-    <div>
-        <a href="#">注册</a>
-    </div>
+    <div>注册</div>
 </body>
 
 </html>
