--- a/logout.html
+++ b/logout.html
@@ -4,17 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git demo</title>
+    <title>注销</title>
 </head>
 
 <body>
-    <div>git-demo</div>
-    <a href="">hello</a>
-    wjg111222
-    <div>
-        <a href="#">登陆</a>
-        <a href="#">注册</a>
-    </div>
     <div>注销</div>
 </body>
 
