--- a/logout.html
+++ b/logout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>注销</title>
+    <title>注销1</title>
 </head>
 
 <body>
